[gd_scene load_steps=6 format=3 uid="uid://llr0p0l6ici2"]

[ext_resource type="Script" path="res://ui/level_selection_ui/level_selection_ui.gd" id="1_ravgu"]
[ext_resource type="Texture2D" uid="uid://ce4nqs06rl4bu" path="res://assets/ui_materials/Group 28 (1).png" id="2_rmte4"]
[ext_resource type="Texture2D" uid="uid://c1kanyhl5pvrq" path="res://assets/ui_materials/Group 29 (1).png" id="3_assa0"]
[ext_resource type="Texture2D" uid="uid://hog8ijj6l86m" path="res://assets/ui_materials/Group 30 (1).png" id="4_tem4l"]
[ext_resource type="Texture2D" uid="uid://cfanc7wd66brd" path="res://assets/tutorial_materials/end_meme.jpg" id="5_xwfxg"]

[node name="Level_Selection_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ravgu")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.5
offset_top = -237.0
offset_right = 449.5
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="level1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_rmte4")
flat = true
icon_alignment = 1

[node name="level2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_assa0")
flat = true

[node name="level3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_tem4l")
flat = true
icon_alignment = 1

[node name="EndMeme" type="Sprite2D" parent="."]
visible = false
position = Vector2(567, 322)
scale = Vector2(3, 3)
texture = ExtResource("5_xwfxg")

[connection signal="pressed" from="Panel/VBoxContainer/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/level3" to="." method="_on_level_3_pressed"]
